tests/baselines/reference/concatClassAndString.errors.txt
==== tests/cases/compiler/concatClassAndString.ts (1 errors) ====
    // Shouldn't compile (the long form f = f + ""; doesn't):
    class f { }
    
    f += '';
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    